--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "tailwindcss": "^3.4.7",
     "typescript": "~5.4.0",
     "vite": "^5.3.1",
+    "vite-plugin-pwa": "^0.20.1",
     "vitest": "^1.6.0",
     "vue-tsc": "^2.0.21"
   }
